# Lunabotics-2025

./: .gitignore  LICENSE  README.md  install_dependencies.sh
lunabot_autonomous/: CMakeLists.txt  package.xml  setup.py
lunabot_autonomous/audio/: startup.chrp
lunabot_autonomous/msg/: Control.msg  ControlState.msg  MotorOutput.msg
lunabot_autonomous/src/control/: motor_test.cpp  robot_controller.cpp
lunabot_autonomous/src/physical_robot/control/: robot_controller.cpp
lunabot_autonomous/src/physical_robot/system/: hardware_monitor.cpp  imu_rotator.cpp  navigator_client.cpp
lunabot_autonomous/src/scripts/: digging_script.cpp
lunabot_autonomous/src/simulated_robot/: blade_joint_controller.cpp  topic_remap.cpp
lunabot_autonomous/src/simulated_robot/teleop/: keyboard_teleop.py
lunabot_autonomous/src/system/: hardware_monitor.cpp  imu_rotator.cpp  navigator_client.cpp
lunabot_bringup/: CMakeLists.txt  package.xml
lunabot_bringup/behavior_trees/: navigate_to_pose_w_replanning_goal_patience_and_recovery.xml
lunabot_bringup/launch/: external_launch.py  hardware_launch.py  mapping_launch.py  navigation_launch.py  real_launch.py  simulation_launch.py  visualization_launch.py
lunabot_bringup/params/: a3_lidar_params.yaml  default_view.rviz  ekf_params.yaml  nav2_params.yaml  s2_lidar_params.yaml  sim_params.yaml  tag_params.yaml
lunabot_config/: CMakeLists.txt  package.xml
lunabot_config/behavior_trees/: nav_through_poses_w_replanning_and_recovery.xml  nav_to_pose_with_consistent_replanning_and_if_path_becomes_invalid.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_goal_patience_and_recovery.xml
lunabot_config/params/: ekf_params.yaml  gazebo_params.yaml  nav2_params.yaml  nav2_real_params.yaml  nav2_sim_params.yaml  rtabmap_params.yaml  s2_lidar_params.yaml  s2l_filter_params.yaml  sim_params.yaml
lunabot_config/rviz/: robot_view.rviz
lunabot_description/: CMakeLists.txt  package.xml
lunabot_description/launch/: test_bot_description_launch.py
lunabot_description/meshes/: base_link.stl  blade_link.stl  ebox_link.stl  lidar2_link.stl
lunabot_description/urdf/: common_properties.xacro  sim_bot.xacro  test_bot.xacro
lunabot_description/worlds/: battlebots.world  moon.world
lunabot_external/realsense_ros/realsense2_camera/include/: constants.h
lunabot_external/realsense_ros/realsense2_camera/launch/: rs_d400_and_t265_launch.py  rs_d455_launch.py  rs_multi_camera_launch.py  rs_t265_launch.py
lunabot_external/realsense_ros/realsense2_camera/src/: t265_realsense_node.cpp
lunabot_external/rf2o_laser_odometry/include/rf2o_laser_odometry/: CLaserOdometry2DNode.h
lunabot_external/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp
lunabot_simulation/: CMakeLists.txt  package.xml  setup.py
lunabot_simulation/meshes/: base_link.stl  camera_link.stl  wheel_link.stl
lunabot_simulation/meshes/high_poly/: blade_link.dae
lunabot_simulation/meshes/low_poly/: camera_link.stl  lidar1_link.stl
lunabot_simulation/models/apriltag/materials/scripts/: apriltag.material
lunabot_simulation/models/low_poly/rock_round/materials/scripts/: rock_round.material
lunabot_simulation/models/lunar_surface/: lunar_surface.stl
lunabot_simulation/models/lunar_surface/materials/scripts/: lunar_surface.material
lunabot_simulation/models/rock_rough/materials/scripts/: rock_rough.material
lunabot_simulation/src/: blade_joint_controller.cpp  topic_remapper.cpp
lunabot_simulation/src/teleop/: keyboard_teleop.py
lunabot_simulation/urdf/: bulldozer_bot.xacro  real_bot.xacro  sim_bot.xacro  simulation_bot.xacro  test_bot.xacro
lunabot_simulation/urdf/high_poly/: realistic_simulation_bot.xacro
lunabot_simulation/urdf/low_poly/: real_bot.xacro  simulation_bot.xacro
lunabot_simulation/worlds/: artemis_arena.world  artemis_arena2.world
lunabot_system/: CMakeLists.txt  package.xml
lunabot_system/action/: Localization.action
lunabot_system/src/control/: localization_server.cpp  navigation_client.cpp  robot_controller.cpp
lunabot_system/src/utils/: hardware_monitor.cpp  imu_rotator.cpp  odom_tf_publisher.cpp
scripts/: canable_start.sh  install_dependencies.sh  setup_udev_rules.sh
